--- a/documentation/demos/templates/startup-with-splash/template-with-splash.html
+++ b/documentation/demos/templates/startup-with-splash/template-with-splash.html
@@ -5,7 +5,7 @@
     <title></title>
 </head>
 <body>
-    <script type="text/javascript" src="../../../../build/caat.js"></script>
+    <script type="text/javascript" src="../../../../build/caat-css.js"></script>
     <script type="text/javascript" src="template-with-splash.js"></script>
     <script type="text/javascript">
         (function() {
